# gitpilot

./: Cargo.toml
src/: main.rs
src/commands/: scan.rs  update.rs
