[package]
name = "gitpilot"
version = "0.0.1"
edition = "2024"
rust-version = "1.85"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }
walkdir = "2"
